Corrected invalid use of nested anchor tags: Changed HTML cards to use Bootstrap's stretched-link class, added inner-link class for links inside cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,11 @@ a:hover {
     padding: 0.5rem;
 }
 
+.inner-link {
+    position:relative;
+    z-index: 1;
+}
+
 /* Game Containers */
 
 .game-window {
